# k8s-mcp-server

./: .dockerignore  Dockerfile  README.md  k8s_client.py  k8s_deployments.py  k8s_services.py  main.py  mcp_instance.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
docs/: BLOG.md
src/: Stocks.py  k8s.py  k8s_client.py  k8s_deployments.py  k8s_pods.py  k8s_replicasets.py  k8s_services.py  k8s_utils.py  main.py  mcp_instance.py
